# ZT_Trans_v1

./: .env.example  .gitignore  CHANGELOG.md  PROJECT_ARCHITECTURE.md  README.md  README_zh.md  ROADMAP.md  ai-term-explainer-project-plan.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: desktop-build.cmd  desktop-dev.cmd
src/: App.tsx  CaptureOverlay.tsx  ResultPopup.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_log.rs  lib.rs  lifecycle.rs  main.rs  ocr.rs  selection.rs
src/components/: FloatingResult.tsx  FormattedAnswer.tsx  HistoryPanel.tsx  ModeTabs.tsx  SettingsPanel.tsx
src/lib/: answerQuality.ts  defaults.ts  llm.ts  prompts.ts  resultWindow.ts  storage.ts  tauri.ts  types.ts
src/styles/: app.css  capture.css  theme.css
