[package]
name = "zy-trans"
version = "0.1.0"
description = "AI selection and OCR explanation assistant"
authors = ["ZY Trans"]
license = "MIT"
edition = "2021"

[lib]
name = "zy_trans_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.6.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
tauri = { version = "=2.11.5", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "=2.3.2"
tauri-plugin-global-shortcut = "=2.3.2"
tauri-plugin-shell = "=2.3.5"
thiserror = "1.0"
uuid = { version = "1.10.0", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
  "Foundation",
  "Graphics_Imaging",
  "Media_Ocr",
  "Storage_Streams",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_UI_Accessibility",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }
